# StyledWidgets

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
styledwidgets/: __init__.py  agents.py  color.py  styled.py  types.py  utils.py
